# Qt-kurs

./: CMakeLists.txt  CMakeLists.txt.user.11592d3  CMakeLists.txt.user.955f2fa  README.md  architecture.md  emojimenubuilder.cpp  emojimenubuilder.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  note.h  noteexporter.cpp  noteexporter.h  noteformatter.cpp  noteformatter.h  noteitemdelegate.cpp  noteitemdelegate.h  notemanager.cpp  notemanager.h  recentlydeletedmanager.cpp  recentlydeletedmanager.h  recentlydeletedwindow.cpp  recentlydeletedwindow.h  test_notemanager.cpp  user_guide.md
